# wfs-cppclient

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  readme.txt
cmake/: wfs_client-config.cmake.in
examples/: wfs_client_sample.cpp
gen-cpp/: WfsIface.cpp  WfsIface.h  WfsIface_server.skeleton.cpp  wfs_types.cpp  wfs_types.h
include/wfs_client/: datatype_.hpp  iwfs_client.hpp  utils.hpp  wfs_exports.hpp
src/: wfs_client.cpp  wfs_client.def  wfs_client_impl.cpp
